--- a/new-place-find/Base.lproj/Main.storyboard
+++ b/new-place-find/Base.lproj/Main.storyboard
@@ -1,26 +1,189 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="9ZI-K2-eJZ">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Collection View Controller-->
+        <scene sceneID="1g7-Wa-vZ4">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <collectionViewController id="mmc-2g-d6o" customClass="CollectionViewController" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" dataMode="prototypes" id="8i1-88-h2i">
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" red="0.55801798057293062" green="0.94011617748405929" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="18" minimumInteritemSpacing="48" id="2F8-gt-2T3">
+                            <size key="itemSize" width="174" height="189"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="eE9-82-Kh6" customClass="CollectionViewCell">
+                                <rect key="frame" x="73" y="0.0" width="174" height="189"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="174" height="189"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </view>
+                                <color key="backgroundColor" red="1" green="0.98023605757246179" blue="0.72262415228429755" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="mmc-2g-d6o" id="P5O-SN-uDh"/>
+                            <outlet property="delegate" destination="mmc-2g-d6o" id="ON2-od-bU6"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" id="OtL-aI-Rfe"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QCb-t9-d5u" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1322" y="-195"/>
+        </scene>
+        <!--Not Data View Controller-->
+        <scene sceneID="BiA-BX-IO8">
+            <objects>
+                <viewController storyboardIdentifier="notData" useStoryboardIdentifierAsRestorationIdentifier="YES" id="ASl-RE-WTW" customClass="notDataViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="gf5-JT-vH9"/>
+                        <viewControllerLayoutGuide type="bottom" id="mK7-64-SJE"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Z9a-sj-TXO">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Y2-Cn-Syk">
+                                <color key="backgroundColor" red="0.81710904811397955" green="1" blue="0.73441808401720765" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sf3-ge-e8r">
+                                <color key="backgroundColor" red="0.73644121420975328" green="1" blue="0.72047330327547177" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="sf3-ge-e8r" secondAttribute="height" multiplier="110:43" priority="250" id="e7c-fO-l49"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="e7c-fO-l49"/>
+                                    </mask>
+                                </variation>
+                                <variation key="widthClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="e7c-fO-l49"/>
+                                    </mask>
+                                </variation>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.51528122327627002" green="1" blue="0.7720603350219154" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="mK7-64-SJE" firstAttribute="top" secondItem="7Y2-Cn-Syk" secondAttribute="bottom" constant="161" id="Ey8-CK-UvW"/>
+                            <constraint firstItem="mK7-64-SJE" firstAttribute="top" secondItem="sf3-ge-e8r" secondAttribute="bottom" constant="184" id="HLF-mu-06b">
+                                <variation key="widthClass=compact" constant="187"/>
+                            </constraint>
+                            <constraint firstItem="7Y2-Cn-Syk" firstAttribute="leading" secondItem="Z9a-sj-TXO" secondAttribute="leadingMargin" constant="27" id="QBh-GV-tjt"/>
+                            <constraint firstItem="sf3-ge-e8r" firstAttribute="top" secondItem="gf5-JT-vH9" secondAttribute="bottom" constant="187" id="YOL-xU-sgl"/>
+                            <constraint firstItem="sf3-ge-e8r" firstAttribute="leading" secondItem="Z9a-sj-TXO" secondAttribute="leadingMargin" constant="34" id="pge-jA-4wN">
+                                <variation key="widthClass=compact" constant="22"/>
+                            </constraint>
+                            <constraint firstAttribute="trailingMargin" secondItem="sf3-ge-e8r" secondAttribute="trailing" constant="34" id="weh-4K-Ufs">
+                                <variation key="widthClass=compact" constant="46"/>
+                            </constraint>
+                            <constraint firstAttribute="trailingMargin" secondItem="7Y2-Cn-Syk" secondAttribute="trailing" constant="27" id="x1a-IJ-elk"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="7Y2-Cn-Syk"/>
+                                <exclude reference="sf3-ge-e8r"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="QBh-GV-tjt"/>
+                                <exclude reference="x1a-IJ-elk"/>
+                                <exclude reference="YOL-xU-sgl"/>
+                                <exclude reference="pge-jA-4wN"/>
+                                <exclude reference="weh-4K-Ufs"/>
+                                <exclude reference="Ey8-CK-UvW"/>
+                                <exclude reference="HLF-mu-06b"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=compact">
+                            <mask key="subviews">
+                                <exclude reference="7Y2-Cn-Syk"/>
+                                <include reference="sf3-ge-e8r"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="QBh-GV-tjt"/>
+                                <exclude reference="x1a-IJ-elk"/>
+                                <include reference="YOL-xU-sgl"/>
+                                <include reference="pge-jA-4wN"/>
+                                <include reference="weh-4K-Ufs"/>
+                                <exclude reference="Ey8-CK-UvW"/>
+                                <include reference="HLF-mu-06b"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <connections>
+                        <outlet property="lable" destination="sf3-ge-e8r" id="Ndh-lo-NWC"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QO4-mQ-m1N" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1369" y="490"/>
+        </scene>
+        <!--Table View Controller-->
+        <scene sceneID="esD-O1-p7g">
+            <objects>
+                <tableViewController storyboardIdentifier="second" useStoryboardIdentifierAsRestorationIdentifier="YES" id="4jZ-q1-gaP" customClass="TableViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="0Kd-Md-gld">
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="7v9-TA-Vov">
+                                <rect key="frame" x="0.0" y="28" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="7v9-TA-Vov" id="kvO-v0-pFc">
+                                    <frame key="frameInset" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="4jZ-q1-gaP" id="qan-Tv-cWR"/>
+                            <outlet property="delegate" destination="4jZ-q1-gaP" id="pVf-7t-2AA"/>
+                        </connections>
+                    </tableView>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Qqm-16-Iyz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2118" y="-195"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="7c1-Ej-gTc">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="9ZI-K2-eJZ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="bCw-Bb-sLz">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="mmc-2g-d6o" kind="relationship" relationship="rootViewController" id="P1a-ZZ-iZu"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ktf-p6-aSQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="444" y="-194.75262368815595"/>
         </scene>
     </scenes>
 </document>
